# kiriboshi-daikon

./: README.md  pyproject.toml
kiriboshi_daikon/: application.py
tests/: test_kiriboshi_daikon.py
