[tool.poetry]
name = "kiriboshi-daikon"
version = "0.1.0"
description = ""
authors = ["Yoshihiro Tanaka <contact@cordea.jp>"]

[tool.poetry.scripts]
kiriboshi-daikon = "kiriboshi_daikon.application:main"

[tool.poetry.dependencies]
python = "^3.9"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "pep8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
